--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </li>
                             <div class="tui-black-divider"></div>
 
-                            <!-- SUBMENU EXAMPLE -->
+                            <!-- Submenu -->
 
                             <li class="tui-dropdown block">
                                 <span class="right">►</span>
@@ -137,20 +137,27 @@
             </ul>
         </nav>
 
-        <div class="tui-window">
+        <!-- Main Window -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="tui-window centered">
             <fieldset class="tui-fieldset">
-                <legend>Window</legend>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-                Curabitur id vestibulum libero, id fermentum lorem.<br>
-                Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
-                Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
-                In quis bibendum libero. Donec nec egestas ipsum.<br>
-                Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+                <legend>Title</legend>
+                <br>
+                <span>
+                  ░▒▓███████▓▒░▒▓████████▓▒░▒▓██████▓▒░░▒▓███████▓▒░▒▓████████▓▒░▒▓███████▓▒░ ░▒▓██████▓▒░░▒▓█▓▒░▒▓█▓▒░       ░▒▓███████▓▒░ 
+                  ░▒▓█▓▒░         ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░      ░▒▓█▓▒░        
+                  ░▒▓█▓▒░         ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░      ░▒▓█▓▒░        
+                   ░▒▓██████▓▒░   ░▒▓█▓▒░  ░▒▓████████▓▒░▒▓███████▓▒░  ░▒▓█▓▒░   ░▒▓███████▓▒░░▒▓████████▓▒░▒▓█▓▒░▒▓█▓▒░       ░▒▓██████▓▒░  
+                         ░▒▓█▓▒░  ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░ 
+                         ░▒▓█▓▒░  ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░ 
+                  ░▒▓███████▓▒░   ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓████████▓▒░▒▓███████▓▒░  
+                </span>
                 <br>
                 <div class="tui-divider"></div>
                 <br>
-                <button class="tui-button white-255-text">more...</button>
-                <button class="tui-button purple-168 white-255-text">share</button>
             </fieldset>
         </div>
 
