--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black" style="background-color: rgb(0, 0, 160);">
+    <div class="tui-screen-1024-768 bordered centered" style="background-color: rgb(0, 0, 160);">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
@@ -146,7 +146,7 @@
             <fieldset class="tui-fieldset">
                 <legend>Title</legend>
                 <br>
-                <span>
+                <span style="font-size: 18px;">
                   ░▒▓███████▓▒░▒▓████████▓▒░▒▓██████▓▒░░▒▓███████▓▒░▒▓████████▓▒░▒▓███████▓▒░ ░▒▓██████▓▒░░▒▓█▓▒░▒▓█▓▒░       ░▒▓███████▓▒░ 
                   ░▒▓█▓▒░         ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░      ░▒▓█▓▒░        
                   ░▒▓█▓▒░         ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░      ░▒▓█▓▒░        
