--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-tui-scroll tui-bg-blue-black">
+<html lang="en" class="no-tui-scroll" style="background-color: black;">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="tui-screen-1024-768 bordered centered" style="background-color: rgb(0, 0, 160);">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
@@ -140,20 +140,16 @@
         <!-- Main Window -->
         <br>
         <br>
-        <br>
-        <br>
         <div class="tui-window centered">
             <fieldset class="tui-fieldset">
                 <legend>Title</legend>
                 <br>
-                <span style="font-size: 18px;">
-                  ░▒▓███████▓▒░▒▓████████▓▒░▒▓██████▓▒░░▒▓███████▓▒░▒▓████████▓▒░▒▓███████▓▒░ ░▒▓██████▓▒░░▒▓█▓▒░▒▓█▓▒░       ░▒▓███████▓▒░ 
-                  ░▒▓█▓▒░         ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░      ░▒▓█▓▒░        
-                  ░▒▓█▓▒░         ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░      ░▒▓█▓▒░        
-                   ░▒▓██████▓▒░   ░▒▓█▓▒░  ░▒▓████████▓▒░▒▓███████▓▒░  ░▒▓█▓▒░   ░▒▓███████▓▒░░▒▓████████▓▒░▒▓█▓▒░▒▓█▓▒░       ░▒▓██████▓▒░  
-                         ░▒▓█▓▒░  ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░ 
-                         ░▒▓█▓▒░  ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓█▓▒░             ░▒▓█▓▒░ 
-                  ░▒▓███████▓▒░   ░▒▓█▓▒░  ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░ ░▒▓█▓▒░   ░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░░▒▓█▓▒░▒▓█▓▒░▒▓████████▓▒░▒▓███████▓▒░  
+                <span>
+                  _____  __               ______              _  __     
+                  / ___/ / /_ ____ _ _____/_  __/_____ ____ _ (_)/ /_____
+                  \__ \ / __// __ `// ___/ / /  / ___// __ `// // // ___/
+                 ___/ // /_ / /_/ // /    / /  / /   / /_/ // // /(__  ) 
+                /____/ \__/ \__,_//_/    /_/  /_/    \__,_//_//_//____/                  
                 </span>
                 <br>
                 <div class="tui-divider"></div>
