--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <fieldset class="tui-fieldset">
                 <legend>Title</legend>
                 <br>
-                <span>
+                <span class="left">
                   _____  __               ______              _  __       <br>
                   / ___/ / /_ ____ _ _____/_  __/_____ ____ _ (_)/ /_____ <br>
                   \__ \ / __// __ `// ___/ / /  / ___// __ `// // // ___/ <br>
