--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-tui-scroll" style="background-color: black;">
+<html lang="en" class="no-tui-scroll tui-bg-gray-black">
 
 <head>
     <meta charset="UTF-8">
@@ -140,20 +140,48 @@
         <!-- Main Window -->
         <br>
         <br>
-        <div class="tui-window centered">
+        <div class="tui-window center" style="margin-top: 100px; margin-bottom: 100px;">
             <fieldset class="tui-fieldset">
                 <legend>Title</legend>
                 <br>
-                <span class="left">
-                  _____  __               ______              _  __       <br>
-                  / ___/ / /_ ____ _ _____/_  __/_____ ____ _ (_)/ /_____ <br>
-                  \__ \ / __// __ `// ___/ / /  / ___// __ `// // // ___/ <br>
-                 ___/ // /_ / /_/ // /    / /  / /   / /_/ // // /(__  )  <br>
-                /____/ \__/ \__,_//_/    /_/  /_/    \__,_//_//_//____/   <br>           
+                <span>
+                  ___/\/\/\/\/\____/\/\______________________________/\/\/\/\/\/\__________________________/\/\____/\/\_______________
+                  _/\/\__________/\/\/\/\/\__/\/\/\______/\/\__/\/\______/\/\______/\/\__/\/\__/\/\/\______________/\/\______/\/\/\/\_ 
+                 ___/\/\/\/\______/\/\__________/\/\____/\/\/\/\________/\/\______/\/\/\/\________/\/\____/\/\____/\/\____/\/\/\/\___  
+                _________/\/\____/\/\______/\/\/\/\____/\/\____________/\/\______/\/\________/\/\/\/\____/\/\____/\/\__________/\/\_   
+               _/\/\/\/\/\______/\/\/\____/\/\/\/\/\__/\/\____________/\/\______/\/\________/\/\/\/\/\__/\/\/\__/\/\/\__/\/\/\/\___    
+              ____________________________________________________________________________________________________________________     
+              
+              
                 </span>
                 <br>
                 <div class="tui-divider"></div>
                 <br>
+            </fieldset>
+        </div>
+
+
+
+        <div class="info-text">Fieldset features</div>
+        <div class="tui-window orange-168 black-255-text">
+            <fieldset class="tui-fieldset tui-border-solid white-border">
+                <legend class="center white-255-text">Window</legend>
+                <button class="tui-fieldset-button left"><span class="green-255-text">↑</span></button>
+                <button class="tui-fieldset-button"><span class="green-255-text">■</span></button>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                Curabitur id vestibulum libero, id fermentum lorem.<br>
+                Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
+                Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
+                In quis bibendum libero. Donec nec egestas ipsum.<br>
+                Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+                <br>
+                <div class="tui-divider"></div>
+                <br>
+                <a class="tui-button white-168">Copy</a>
+                <a class="tui-button white-168">Paste</a>
+                <br><br>
+                <div class="tui-fieldset-text">Text format: UTF-8</div>
+                <div class="tui-fieldset-text right">Ln: 2, Col: 5</div>
             </fieldset>
         </div>
 
