--- a/CREDITS.html
+++ b/CREDITS.html
@@ -6,6 +6,7 @@
     <title>Credits</title>
     <script src="../dist/tuicss.min.js"></script>
     <link rel="stylesheet" href="../dist/tuicss.min.css">
+    <link rel="icon" href="icon.png">
     <style>
         .tui-window, .tui-panel {
             margin-bottom: 20px;
