--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -6,6 +6,7 @@
     <title>STARMAP</title>
     <script src="../dist/tuicss.min.js"></script>
     <link rel="stylesheet" href="../dist/tuicss.min.css">
+    <link rel="icon" href="icon.png">
     <style>
         .tui-window {
             margin-bottom: 40px;
