--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         </nav>
 
         <!-- Main Window -->
-        <div class="tui-window centered" style="margin-top: 100px; margin-bottom: 100px;">
-            <fieldset class="tui-fieldset centered">
+        <div class="tui-screen-640-480 centered" style="margin-top: 100px; margin-bottom: 100px;">
+            <fieldset class="tui-fieldset">
                 <legend>Title</legend>
                 <br>
                 <pre>
