--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="icon.png">
 </head>
 
-<body>
+<body style="padding: 50px">
     <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black">
 
         <!-- Sidenav -->
@@ -141,7 +141,7 @@
         <!-- Main Window -->
         <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
             <fieldset class="tui-fieldset">
-                <legend>Title</legend>
+                <legend>Intro.txt</legend>
                 <br>
                 <pre>
      _             _             _ _      
