--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="tui-window bordered centered tui-bg-blue-black">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
