--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-purple-black">
+<html lang="en" style="background-image: url(../dist/images/bg-gray-black.png)">
 
 <head>
     <meta charset="UTF-8">
@@ -98,7 +98,7 @@
         <div class="center" style="margin-top: 100px; margin-bottom: 100px">
             <div class="tui-window">
                 <fieldset class="tui-fieldset">
-                    <legend>about.txt</legend>
+                    <legend>About.txt</legend>
                     <b>The fuck is this?</b><br>
                     My personal website
                     <br>
