--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-tui-scroll" style="background-image: url(../dist/images/bg-gray-black.png)">
+<html lang="en" class="tui-scroll-cyan" style="background-image: url(../dist/images/bg-gray-black.png)">
 
 <head>
     <meta charset="UTF-8">
