--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-blue-black">
+<html lang="en" class="tui-scroll-cyan" style="background-image: url(../dist/images/bg-gray-black.png)">
 
 <head>
     <meta charset="UTF-8">
