--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-scroll-cyan" style="background-image: url(../dist/images/bg-gray-black.png)">
+<html lang="en" class="tui-scroll-cyan" style="background-color:black;">
 
 <head>
     <meta charset="UTF-8">
@@ -23,7 +23,7 @@
         </div>
     </div>
 
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black">
+    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png)">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
