--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -23,7 +23,6 @@
         
     </style>
 </head>
-    <div class="centered">
         <div class="tui-panel cyan-168 black-255-text centered">
             <div class="tui-panel-content">
                 <b>NOTE:</b> This page is still under construction.<br> 
@@ -31,7 +30,6 @@
                 Please come back after we've collected more data.
             </div>
         </div>
-    </div>
 
     <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png)">
         <body style="padding: 50px">
@@ -113,8 +111,8 @@
             <fieldset class="tui-fieldset">
                 <legend>Intro.txt</legend>
                 <br>
-                <pre>
-                        <pre style="font-size: 2px; font-family: Ubuntu Mono; background-color: rgb(255, 255, 255); color: rgb(0, 0, 0); line-height: 7px;">                                                                                                                                                                                     
+
+                <pre style="font-size: 3px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(255, 255, 255); line-height: 7px;">                                                                                                                                                                                     
                                                                                                                                                                                                              
                                                                                                  `````` _  ._`    `    `_.  _ ``````                                                                         
                                                                                          ``````````                               ``````````                                                                 
