--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -109,10 +109,10 @@
         <br>
         <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
             <fieldset class="tui-fieldset">
-                <legend>Intro.txt</legend>
+                <legend>Solar_System.txt</legend>
                 <br>
 
-                <pre style="font-size: 3px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(255, 255, 255); line-height: 7px;">                                                                                                                                                                                     
+                <pre style="font-size: 7px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(255, 255, 255); line-height: 7px;">                                                                                                                                                                                     
                                                                                                                                                                                                              
                                                                                                  `````` _  ._`    `    `_.  _ ``````                                                                         
                                                                                          ``````````                               ``````````                                                                 
