scroll fix maybe idk

--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -31,7 +31,7 @@
             </div>
         </div>
 
-    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png)">
+    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow: scroll;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
@@ -57,7 +57,7 @@
                                 </li>
                                 <div class="tui-black-divider"></div>
 
-                                <!-- SUBMENU EXAMPLE -->
+                                <!-- Submenu -->
 
                                 <li class="tui-dropdown block">
                                     <span class="right">►</span>
@@ -105,8 +105,6 @@
                     </li>
                 </ul>
             </nav>
-        <br>
-        <br>
         <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
             <fieldset class="tui-fieldset">
                 <legend>Solar_System.txt</legend>
