--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </nav>
 
         <!-- Main Window -->
-        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
+        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;overflow: scroll;">
             <fieldset class="tui-fieldset">
                 <legend>Intro.txt</legend>
                 <br>
