--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="padding: 50px">
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black" style="overflow: scroll;">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
@@ -139,7 +139,7 @@
         </nav>
 
         <!-- Main Window -->
-        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;overflow: scroll;">
+        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
             <fieldset class="tui-fieldset">
                 <legend>Intro.txt</legend>
                 <br>
