--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="padding: 50px">
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black" style="overflow: scroll;">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black tui-scroll-cyan" style="overflow: scroll;">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute">
@@ -204,19 +204,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- Status bar -->
-        <div class="tui-statusbar absolute">
-            <ul>
-                <li><a href="#!"><span class="red-168-text">F1</span> Help</a></li>
-                <li><a href="#!"><span class="red-168-text">F2</span> Save</a></li>
-                <li><a href="#!"><span class="red-168-text">F3</span> Open</a></li>
-                <li><a href="#!"><span class="red-168-text">Alt+F9</span> Compile</a></li>
-                <span class="tui-statusbar-divider"></span>
-                <li><a href="#!"><span class="red-168-text">F10</span> Menu</a></li>
-            </ul>
-        </div>
-
     </div>
 </body>
 
