center fix maybe?????

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </nav>
 
         <!-- Main Window -->
-        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
+        <div class="tui-window center" style="margin-top: 100px; margin-bottom: 100px;">
             <fieldset class="tui-fieldset">
                 <legend>Intro.txt</legend>
                 <br>
@@ -158,7 +158,7 @@
                 go away!!!!!!
             </fieldset>
         </div>
-        <div class="tui-window centered orange-168 black-255-text">
+        <div class="tui-window center orange-168 black-255-text">
             <fieldset class="tui-fieldset tui-border-solid white-border centered">
                 <legend class="center white-255-text">Window</legend>
                 <button class="tui-fieldset-button"><span class="green-255-text">■</span></button>
