--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
         </nav>
 
         <!-- Main Window -->
-        <div class="tui-window center" style="margin-top: 100px; margin-bottom: 100px;">
-            <fieldset class="tui-fieldset">
+        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
+            <fieldset class="tui-fieldset centered">
                 <legend>Intro.txt</legend>
                 <br>
                 <pre>
@@ -158,7 +158,7 @@
                 go away!!!!!!
             </fieldset>
         </div>
-        <div class="tui-window center orange-168 black-255-text">
+        <div class="tui-window orange-168 black-255-text">
             <fieldset class="tui-fieldset tui-border-solid white-border centered">
                 <legend class="center white-255-text">Window</legend>
                 <button class="tui-fieldset-button"><span class="green-255-text">■</span></button>
