--- a/CREDITS.html
+++ b/CREDITS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-green-black">
+<html lang="en" class="tui-bg-green-black" style="overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
