--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-scroll-cyan" style="background-color:black;">
+<html lang="en" class="tui-scroll-cyan" style="background-color:black;overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
