--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image: url(../dist/images/bg-gray-black.png)">
+<html lang="en" style="background-image: url(../dist/images/bg-gray-black.png);overflow-x: hidden;">
 
 <head>
     <meta charset="UTF-8">
