navbar test fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black tui-scroll-cyan" style="overflow: scroll;">
 
         <!-- Sidenav -->
-        <nav class="tui-sidenav absolute">
+        <nav class="tui-sidenav absolute" style="position: fixed;top: 0px;">
             <ul>
                 <li>
                     <a href="#!">
