--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-scroll-cyan" style="background-image: url(../dist/images/bg-gray-black.png); overflow-x: hidden;">
+<html lang="en" class="tui-scroll-cyan" style="background-image: url(../dist/images/bg-gray-black.png);">
 
 <head>
     <meta charset="UTF-8">
@@ -10,10 +10,10 @@
 </head>
 
 <body style="padding: 50px">
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black tui-scroll-cyan" style="overflow: scroll;">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black tui-scroll-cyan" style="overflow-y: scroll;overflow-x: hidden;">
 
         <!-- Sidenav -->
-        <nav class="tui-sidenav absolute" style="position: fixed;top: 0px;">
+        <nav class="tui-sidenav absolute" style="position: sticky;top: 0px;">
             <ul>
                 <li>
                     <a href="#!">
