--- a/CREDITS.html
+++ b/CREDITS.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-bg-green-black" style="overflow-x: hidden;">
+<html lang="en" class="tui-bg-green-black">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png)">
+    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow-y: scroll;overflow-x: hidden;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
