--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="tui-scroll-cyan" style="background-color:black;overflow-x: hidden;">
+<html lang="en" class="tui-scroll-cyan" style="background-color:black;">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow: scroll;">
+    <div class="tui-screen-1024-768 bordered centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow-y: scroll;overflow-x: hidden;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
