--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image: url(../dist/images/bg-gray-black.png);overflow-x: hidden;">
+<html lang="en" style="background-image: url(../dist/images/bg-gray-black.png);">
 
 <head>
     <meta charset="UTF-8">
@@ -19,7 +19,7 @@
         }
     </style>
 </head>
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black" style="overflow-y: scroll;overflow-x: hidden;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
