--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body style="padding: 50px">
-    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black tui-scroll-cyan" style="overflow-y: scroll;overflow-x: hidden;">
+    <div class="tui-screen-1024-768 bordered centered tui-bg-blue-black tui-scroll-cyan tui-shadow" style="overflow-y: scroll;overflow-x: hidden;">
 
         <!-- Sidenav -->
         <nav class="tui-sidenav absolute" style="position: sticky;top: 0px;">
