--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-    <div class="tui-screen-1024-768 centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow-y: scroll;overflow-x: hidden;">
+    <div class="centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow-y: scroll;overflow-x: hidden;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
