--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 
-    <div class="centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow-y: scroll;overflow-x: hidden;">
+    <div class="tui-screen-1024-768 centered" style="background-image: url(../dist/images/bg-gray-black.png);overflow-y: scroll;overflow-x: hidden;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
@@ -150,7 +150,7 @@
                           .         ,,        ==         "         ,         _         _         ..         ?SAAAAAAAAAS?         ..         _         _         _         ,         "=        ::         _  
                           "         !=        ,,         `                             `         _         =ZAAAAAAAAAAAZ=         _         .                             `         __        ==         =  
                           =         !=        ,,         `                             `         _         "qAAAAAAAAAAAA=         _         .                             `         __        ==         =  
-                          .         ,,        ==         "         ,         _         _         ..         ?pAAAAAAAAAp?         ..         .         _         _         ,         "=        ::         _  
+                          .         ,,        ==         "         ,         _         _         ..         ?pAAAAAAAAAp?         ..         .         _         _         ,         "=        ::         _                           
                                      `        ``         `         .         _`        _`         _          "]mAAAAAm}=          _         `_         _         .         .         ``        ``            
                           ,,         ,         _         _         _         `,       `z6P=       `_           `,=~=,`           _`         _         _`         _         _         _         ,         ,,  
                            `         `         _         _.        ..         _       .AB8+        `_                           _`         ..         _         ..        ._         _         `         ``  
