--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -98,12 +98,12 @@
                     </li>
                 </ul>
             </nav>
-        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;">
+        <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;background-color: black;">
             <fieldset class="tui-fieldset">
                 <legend>Solar_System.txt</legend>
                 <br>
 
-                <pre style="font-size: 7px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(255, 255, 255); line-height: 7px;">                                                                                                                                                                                     
+                <pre style="font-size: 7px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(0, 168, 0); line-height: 7px;">                                                                                                                                                                                     
                                                                                                                                                                                                              
                                                                                                  `````` _  ._`    `    `_.  _ ``````                                                                         
                                                                                          ``````````                               ``````````                                                                 
