--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -100,7 +100,7 @@
             </nav>
         <div class="tui-window" style="margin-top: 100px; margin-bottom: 100px;background-color: black;">
             <fieldset class="tui-fieldset">
-                <legend>Solar_System.txt</legend>
+                <legend>/Solar_System/Overview</legend>
                 <br>
 
                 <pre style="font-size: 7px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(0, 168, 0); line-height: 7px;">                                                                                                                                                                                     
@@ -201,7 +201,7 @@
         </div>
         <div class="tui-window" style="text-align: left;">
             <fieldset class="tui-fieldset">
-                <legend class="center">PLANET INDEX</legend>
+                <legend class="center">/Solar_System/Planet_Index</legend>
                 <table class="tui-table hovered-cyan" style="width: 700px">
                     <thead>
                         <tr>
