--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -10,6 +10,7 @@
     <style>
         .tui-window {
             margin-bottom: 40px;
+            margin-left:40px;
         }
 
         @import url("https://fonts.googleapis.com/css?family=Inconsolata|Roboto+Mono|Ubuntu+Mono|Cutive+Mono");
@@ -24,7 +25,7 @@
     </style>
 </head>
 
-    <div class="tui-screen-1024-768 centered tui-bg-blue-black" style="overflow-y: scroll;overflow-x: hidden;width:1400px;height:768px;">
+    <div class="tui-screen-1024-768 centered tui-bg-blue-black tui-shadow" style="overflow-y: scroll;overflow-x: hidden;width:1400px;height:768px;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
