--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -31,17 +31,17 @@
             <nav class="tui-nav absolute">
                 <span class="tui-datetime" data-format="h:m:s a"></span>
                 <ul>
-                    <li class="tui-sidenav-button red-168-text">≡</li>
+                    <li class="tui-sidenav-button blue-168-text">≡</li>
                     <span class="tui-statusbar-divider"></span>
 
                     <li class="tui-dropdown">
                         <a href="https://startrails.space/index">
-                            <span class="red-168-text">H</span>ome
+                            <span class="blue-168-text">H</span>ome
                         </a>
                     </li>
 
                     <li class="tui-dropdown">
-                        <span class="red-168-text">P</span>rojects
+                        <span class="blue-168-text">P</span>rojects
                         <div class="tui-dropdown-content">
                             <ul>
                                 <li>
@@ -89,12 +89,12 @@
                     </li>
                     <li class="tui-dropdown">
                         <a href="https://startrails.space/about">
-                            <span class="red-168-text">A</span>bout
+                            <span class="blue-168-text">A</span>bout
                         </a>
                     </li>
                     <li class="tui-dropdown">
                         <a href="https://startrails.space/CREDITS">
-                            <span class="red-168-text">C</span>redits
+                            <span class="blue-168-text">C</span>redits
                         </a>
                     </li>
                 </ul>
@@ -104,7 +104,7 @@
                 <legend>/Solar_System/Overview/</legend>
                 <br>
 
-                <pre style="font-size: 7px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(0, 168, 0); line-height: 7px;">                                                                                                                                                                                     
+                <pre style="font-size: 5px; font-family: Ubuntu Mono; background-color: rgba(255, 255, 255, 0); color: rgb(0, 168, 0); line-height: 5px;">                                                                                                                                                                                     
                                                                                                                                                                                                              
                                                                                                  `````` _  ._`    `    `_.  _ ``````                                                                         
                                                                                          ``````````                               ``````````                                                                 
