--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-    <div class="tui-screen-1024-768 centered tui-bg-blue-black tui-shadow" style="overflow-y: scroll;overflow-x: hidden;width:1400px;height:768px;">
+    <div class="tui-screen-1024-768 centered tui-bg-blue-black tui-shadow.white-168" style="overflow-y: scroll;overflow-x: hidden;width:1400px;height:768px;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
@@ -55,22 +55,22 @@
 
                                 <li class="tui-dropdown block">
                                     <span class="right">►</span>
-                                    <span class="red-168-text">S</span>tarmap
+                                    <span class="cyan-255-text">S</span>tarmap
                                     <div class="tui-dropdown-content">
                                         <ul>
                                             <li>
                                                 <a href="/STARMAP/MAP">
-                                                    <span class="red-168-text">M</span>ap
+                                                    <span class="cyan-255-text">M</span>ap
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#!">
-                                                    <span class="red-168-text">W</span>iki
+                                                    <span class="cyan-255-text">W</span>iki
                                                 </a>
                                             </li>
                                             <li>
                                                 <a href="#!">
-                                                    <span class="red-168-text">M</span>ore...
+                                                    <span class="cyan-255-text">M</span>ore...
                                                 </a>
                                             </li>
                                         </ul>
@@ -80,7 +80,7 @@
                                 <div class="tui-black-divider"></div>
                                 <li>
                                     <a href="#!">
-                                        <span class="red-168-text">Q</span>uit
+                                        <span class="cyan-255-text">Q</span>uit
                                         <span class="tui-shortcut">F10</span>
                                     </a>
                                 </li>
