--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -41,12 +41,12 @@
                     </li>
 
                     <li class="tui-dropdown">
-                        <span class="blue-168-text">P</span>rojects
+                        <span class="cyan-255-text">P</span>rojects
                         <div class="tui-dropdown-content">
                             <ul>
                                 <li>
                                     <a href="#!">
-                                        <span class="red-168-text">E</span>xample
+                                        <span class="cyan-255-text">E</span>xample
                                     </a>
                                 </li>
                                 <div class="tui-black-divider"></div>
