--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -25,7 +25,7 @@
     </style>
 </head>
 
-    <div class="tui-screen-1024-768 centered tui-bg-blue-black tui-shadow.white-168" style="overflow-y: scroll;overflow-x: hidden;width:1400px;height:768px;">
+    <div class="tui-screen-1024-768 centered tui-bg-blue-black tui-shadow" style="overflow-y: scroll;overflow-x: hidden;width:1400px;height:768px;">
         <body style="padding: 50px">
 
             <nav class="tui-nav absolute">
@@ -200,6 +200,36 @@
                 <br>
             </fieldset>
         </div>
+
+
+        <!-- Scroll window -->
+        <div class="tui-window white-168 black-255-text">
+            <fieldset class="tui-fieldset">
+                <legend class="white-255-text">Window</legend>
+                <div style="overflow: scroll; height: 200px; width: 400px; white-space: nowrap;">
+                    <span class="tui-shadow">The Lorem Ipsum </span><br><br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                    Curabitur id vestibulum libero, id fermentum lorem.<br>
+                    Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
+                    Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
+                    In quis bibendum libero. Donec nec egestas ipsum.<br>
+                    Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                    Curabitur id vestibulum libero, id fermentum lorem.<br>
+                    Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
+                    Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
+                    In quis bibendum libero. Donec nec egestas ipsum.<br>
+                    Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+                    Curabitur id vestibulum libero, id fermentum lorem.<br>
+                    Aenean aliquam erat leo, eu tempus ex ornare eu.<br>
+                    Sed ut lacus libero. Etiam rhoncus ipsum arcu.<br>
+                    In quis bibendum libero. Donec nec egestas ipsum.<br>
+                    Sed in venenatis diam. Nullam sollicitudin risus vel.<br>
+                </div>
+            </fieldset>
+        </div>
+
         <div class="tui-window" style="text-align: left;">
             <fieldset class="tui-fieldset">
                 <legend class="center">/Solar_System/Planet_Index/</legend>
