--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -203,10 +203,11 @@
 
 
         <!-- Scroll window -->
+        <div class="info-text tui-shadow">General Text</div>
         <div class="tui-window white-168 black-255-text">
             <fieldset class="tui-fieldset">
                 <legend class="white-255-text">Window</legend>
-                <div style="overflow: scroll; height: 200px; width: 400px; white-space: nowrap;">
+                <div style="overflow: scroll; height: 200px; width: 500px; white-space: nowrap;">
                     <span class="tui-shadow">The Lorem Ipsum </span><br><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                     Curabitur id vestibulum libero, id fermentum lorem.<br>
