--- a/STARMAP/MAP.html
+++ b/STARMAP/MAP.html
@@ -203,11 +203,10 @@
 
 
         <!-- Scroll window -->
-        <div class="info-text">General Text</div>
         <div class="tui-window white-168 black-255-text">
             <fieldset class="tui-fieldset">
-                <legend class="white-255-text">Window</legend>
-                <div style="overflow: scroll; height: 200px; width: 450px; white-space: nowrap;">
+                <legend class="white-255-text">/Solar_System/Info/</legend>
+                <div style="overflow: scroll; height: 200px; width: 430px; white-space: nowrap;">
                     <span class="tui-shadow">The Lorem Ipsum </span><br><br>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
                     Curabitur id vestibulum libero, id fermentum lorem.<br>
